2012-09-12  6.7.8-5 Anthony Thyssen <A.Thyssen@griffith...>
  * All untappered windowing filters Welch and Cosine changed to use a 3 lobe
    support (like Lanczos). These were not part of the original 'zoom' program.

2012-09-11  6.7.9-5 Nicolas Robidoux <nicolas.robidoux@gmail...>
  * sigmoidal-contrast: prevent out of range argument.

2012-09-09  6.7.9-5 Cristy  <quetzlzacatenango@image...>
  * The number of default OpenMP threads is 1 (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=23&t=21838).
  * Only first image of raw grayscale image was set to GRAY (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21428).
  * Change sigmoidal-contrast define to inline method to conform with ANSI-C
    requirements.

2012-09-10  6.7.9-5 Nicolas Robidoux <nicolas.robidoux@gmail...>
  * enhance.c improvements:
  * Add tanh/atanh clone of legacy sigmoidal map (faster & more accurate);
  * Add final ClampToQuantum in sigmoidal colormap loop;
  * Remove OpenMP for threads that do not loop over rows;
  * Immediate no-op exit from sigmoidal-contrast if contrast<MagickEpsilon.

2012-09-08  6.7.9-4 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.9-4, SVN revision 9282.

2012-09-05  6.7.9-4 Cristy  <quetzlzacatenango@image...>
  * Identify image files with embedded '%d' (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21798).
  * Don't include TIFF header for compress.c source module
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21800).

2012-09-01  6.7.9-3 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.9-3, SVN revision 9202.

2012-08-28  6.7.9-3 Cristy  <quetzlzacatenango@image...>
  * Support -channel sync option for -equalize (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21746).
  * Don't remove color profile when setting the image colorspace (reference